SFDCProject/src/objects/Proposal_Performance_Guarantee__c.object
<CustomObject>
    <fields>
        <fullName>Guranteed_Output__c</fullName>
        <label>Guaranteed Output</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <label>Proposal</label>
        <referenceTo>Proposal__c</referenceTo>
        <relationshipLabel>Proposal Performance Guarantee</relationshipLabel>
        <relationshipName>Proposal_Performance_Guarantee</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Refund_Rate__c</fullName>
        <label>Refund Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Proposal Performance Guarantee</label>
    <nameField>
        <label>Proposal Performance Guarantee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Performance Guarantees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>